mid/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> md
Rule 1     md -> md head
Rule 2     md -> md line paragraph
Rule 3     md -> md codefield line CODEFIELD
Rule 4     md -> md quote
Rule 5     md -> md image
Rule 6     md -> md line
Rule 7     md -> empty
Rule 8     md -> md listnumber
Rule 9     listnumber -> LISTNUMBER paragraph
Rule 10    md -> md listdash
Rule 11    listdash -> LISTDASH paragraph
Rule 12    codefield0 -> codefield paragraph
Rule 13    codefield0 -> codefield0 paragraph
Rule 14    codefield -> codefield line line
Rule 15    codefield -> codefield0 line line
Rule 16    codefield0 -> line CODEFIELD
Rule 17    paragraph -> paragraph contents
Rule 18    paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
Rule 19    paragraph -> paragraph BOLD contents BOLD
Rule 20    paragraph -> paragraph ITALIC contents ITALIC
Rule 21    paragraph -> paragraph CODE contents CODE
Rule 22    paragraph -> contents
Rule 23    contents -> TEXT
Rule 24    head -> POUND TEXT
Rule 25    image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN
Rule 26    quote -> line QUOTE paragraph
Rule 27    line -> LINE
Rule 28    empty -> <empty>

Terminals, with rules where they appear

BOLD                 : 19 19
CODE                 : 21 21
CODEFIELD            : 3 16
ITALIC               : 20 20
LBRACKET             : 18 25
LINE                 : 27
LISTDASH             : 11
LISTNUMBER           : 9
LPAREN               : 18 25
POINT                : 25
POUND                : 24
QUOTE                : 26
RBRACKET             : 18 25
RPAREN               : 18 25
TEXT                 : 23 24 25 25
error                : 

Nonterminals, with rules where they appear

codefield            : 3 12 14
codefield0           : 13 15
contents             : 17 18 18 19 20 21 22
empty                : 7
head                 : 1
image                : 5
line                 : 2 3 6 14 14 15 15 16 25 26
listdash             : 10
listnumber           : 8
md                   : 1 2 3 4 5 6 8 10 0
paragraph            : 2 9 11 12 13 17 18 19 20 21 26
quote                : 4

Parsing method: LALR

state 0

    (0) S' -> . md
    (1) md -> . md head
    (2) md -> . md line paragraph
    (3) md -> . md codefield line CODEFIELD
    (4) md -> . md quote
    (5) md -> . md image
    (6) md -> . md line
    (7) md -> . empty
    (8) md -> . md listnumber
    (10) md -> . md listdash
    (28) empty -> .

    POUND           reduce using rule 28 (empty -> .)
    LINE            reduce using rule 28 (empty -> .)
    LISTNUMBER      reduce using rule 28 (empty -> .)
    LISTDASH        reduce using rule 28 (empty -> .)
    $end            reduce using rule 28 (empty -> .)

    md                             shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> md .
    (1) md -> md . head
    (2) md -> md . line paragraph
    (3) md -> md . codefield line CODEFIELD
    (4) md -> md . quote
    (5) md -> md . image
    (6) md -> md . line
    (8) md -> md . listnumber
    (10) md -> md . listdash
    (24) head -> . POUND TEXT
    (27) line -> . LINE
    (14) codefield -> . codefield line line
    (15) codefield -> . codefield0 line line
    (26) quote -> . line QUOTE paragraph
    (25) image -> . line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN
    (9) listnumber -> . LISTNUMBER paragraph
    (11) listdash -> . LISTDASH paragraph
    (12) codefield0 -> . codefield paragraph
    (13) codefield0 -> . codefield0 paragraph
    (16) codefield0 -> . line CODEFIELD

    POUND           shift and go to state 10
    LINE            shift and go to state 11
    LISTNUMBER      shift and go to state 13
    LISTDASH        shift and go to state 14

    head                           shift and go to state 3
    line                           shift and go to state 4
    codefield                      shift and go to state 5
    quote                          shift and go to state 6
    image                          shift and go to state 7
    listnumber                     shift and go to state 8
    listdash                       shift and go to state 9
    codefield0                     shift and go to state 12

state 2

    (7) md -> empty .

    POUND           reduce using rule 7 (md -> empty .)
    LINE            reduce using rule 7 (md -> empty .)
    LISTNUMBER      reduce using rule 7 (md -> empty .)
    LISTDASH        reduce using rule 7 (md -> empty .)
    $end            reduce using rule 7 (md -> empty .)


state 3

    (1) md -> md head .

    POUND           reduce using rule 1 (md -> md head .)
    LINE            reduce using rule 1 (md -> md head .)
    LISTNUMBER      reduce using rule 1 (md -> md head .)
    LISTDASH        reduce using rule 1 (md -> md head .)
    $end            reduce using rule 1 (md -> md head .)


state 4

    (2) md -> md line . paragraph
    (6) md -> md line .
    (26) quote -> line . QUOTE paragraph
    (25) image -> line . POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN
    (16) codefield0 -> line . CODEFIELD
    (17) paragraph -> . paragraph contents
    (18) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> . paragraph BOLD contents BOLD
    (20) paragraph -> . paragraph ITALIC contents ITALIC
    (21) paragraph -> . paragraph CODE contents CODE
    (22) paragraph -> . contents
    (23) contents -> . TEXT

    POUND           reduce using rule 6 (md -> md line .)
    LINE            reduce using rule 6 (md -> md line .)
    LISTNUMBER      reduce using rule 6 (md -> md line .)
    LISTDASH        reduce using rule 6 (md -> md line .)
    $end            reduce using rule 6 (md -> md line .)
    QUOTE           shift and go to state 16
    POINT           shift and go to state 17
    CODEFIELD       shift and go to state 19
    TEXT            shift and go to state 18

    paragraph                      shift and go to state 15
    contents                       shift and go to state 20

state 5

    (3) md -> md codefield . line CODEFIELD
    (14) codefield -> codefield . line line
    (12) codefield0 -> codefield . paragraph
    (27) line -> . LINE
    (17) paragraph -> . paragraph contents
    (18) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> . paragraph BOLD contents BOLD
    (20) paragraph -> . paragraph ITALIC contents ITALIC
    (21) paragraph -> . paragraph CODE contents CODE
    (22) paragraph -> . contents
    (23) contents -> . TEXT

    LINE            shift and go to state 11
    TEXT            shift and go to state 18

    line                           shift and go to state 21
    paragraph                      shift and go to state 22
    contents                       shift and go to state 20

state 6

    (4) md -> md quote .

    POUND           reduce using rule 4 (md -> md quote .)
    LINE            reduce using rule 4 (md -> md quote .)
    LISTNUMBER      reduce using rule 4 (md -> md quote .)
    LISTDASH        reduce using rule 4 (md -> md quote .)
    $end            reduce using rule 4 (md -> md quote .)


state 7

    (5) md -> md image .

    POUND           reduce using rule 5 (md -> md image .)
    LINE            reduce using rule 5 (md -> md image .)
    LISTNUMBER      reduce using rule 5 (md -> md image .)
    LISTDASH        reduce using rule 5 (md -> md image .)
    $end            reduce using rule 5 (md -> md image .)


state 8

    (8) md -> md listnumber .

    POUND           reduce using rule 8 (md -> md listnumber .)
    LINE            reduce using rule 8 (md -> md listnumber .)
    LISTNUMBER      reduce using rule 8 (md -> md listnumber .)
    LISTDASH        reduce using rule 8 (md -> md listnumber .)
    $end            reduce using rule 8 (md -> md listnumber .)


state 9

    (10) md -> md listdash .

    POUND           reduce using rule 10 (md -> md listdash .)
    LINE            reduce using rule 10 (md -> md listdash .)
    LISTNUMBER      reduce using rule 10 (md -> md listdash .)
    LISTDASH        reduce using rule 10 (md -> md listdash .)
    $end            reduce using rule 10 (md -> md listdash .)


state 10

    (24) head -> POUND . TEXT

    TEXT            shift and go to state 23


state 11

    (27) line -> LINE .

    QUOTE           reduce using rule 27 (line -> LINE .)
    POINT           reduce using rule 27 (line -> LINE .)
    CODEFIELD       reduce using rule 27 (line -> LINE .)
    TEXT            reduce using rule 27 (line -> LINE .)
    POUND           reduce using rule 27 (line -> LINE .)
    LINE            reduce using rule 27 (line -> LINE .)
    LISTNUMBER      reduce using rule 27 (line -> LINE .)
    LISTDASH        reduce using rule 27 (line -> LINE .)
    $end            reduce using rule 27 (line -> LINE .)


state 12

    (15) codefield -> codefield0 . line line
    (13) codefield0 -> codefield0 . paragraph
    (27) line -> . LINE
    (17) paragraph -> . paragraph contents
    (18) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> . paragraph BOLD contents BOLD
    (20) paragraph -> . paragraph ITALIC contents ITALIC
    (21) paragraph -> . paragraph CODE contents CODE
    (22) paragraph -> . contents
    (23) contents -> . TEXT

    LINE            shift and go to state 11
    TEXT            shift and go to state 18

    line                           shift and go to state 24
    paragraph                      shift and go to state 25
    contents                       shift and go to state 20

state 13

    (9) listnumber -> LISTNUMBER . paragraph
    (17) paragraph -> . paragraph contents
    (18) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> . paragraph BOLD contents BOLD
    (20) paragraph -> . paragraph ITALIC contents ITALIC
    (21) paragraph -> . paragraph CODE contents CODE
    (22) paragraph -> . contents
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    paragraph                      shift and go to state 26
    contents                       shift and go to state 20

state 14

    (11) listdash -> LISTDASH . paragraph
    (17) paragraph -> . paragraph contents
    (18) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> . paragraph BOLD contents BOLD
    (20) paragraph -> . paragraph ITALIC contents ITALIC
    (21) paragraph -> . paragraph CODE contents CODE
    (22) paragraph -> . contents
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    paragraph                      shift and go to state 27
    contents                       shift and go to state 20

state 15

    (2) md -> md line paragraph .
    (17) paragraph -> paragraph . contents
    (18) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> paragraph . BOLD contents BOLD
    (20) paragraph -> paragraph . ITALIC contents ITALIC
    (21) paragraph -> paragraph . CODE contents CODE
    (23) contents -> . TEXT

    POUND           reduce using rule 2 (md -> md line paragraph .)
    LINE            reduce using rule 2 (md -> md line paragraph .)
    LISTNUMBER      reduce using rule 2 (md -> md line paragraph .)
    LISTDASH        reduce using rule 2 (md -> md line paragraph .)
    $end            reduce using rule 2 (md -> md line paragraph .)
    LBRACKET        shift and go to state 29
    BOLD            shift and go to state 30
    ITALIC          shift and go to state 31
    CODE            shift and go to state 32
    TEXT            shift and go to state 18

    contents                       shift and go to state 28

state 16

    (26) quote -> line QUOTE . paragraph
    (17) paragraph -> . paragraph contents
    (18) paragraph -> . paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> . paragraph BOLD contents BOLD
    (20) paragraph -> . paragraph ITALIC contents ITALIC
    (21) paragraph -> . paragraph CODE contents CODE
    (22) paragraph -> . contents
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    paragraph                      shift and go to state 33
    contents                       shift and go to state 20

state 17

    (25) image -> line POINT . LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN

    LBRACKET        shift and go to state 34


state 18

    (23) contents -> TEXT .

    LBRACKET        reduce using rule 23 (contents -> TEXT .)
    BOLD            reduce using rule 23 (contents -> TEXT .)
    ITALIC          reduce using rule 23 (contents -> TEXT .)
    CODE            reduce using rule 23 (contents -> TEXT .)
    TEXT            reduce using rule 23 (contents -> TEXT .)
    POUND           reduce using rule 23 (contents -> TEXT .)
    LINE            reduce using rule 23 (contents -> TEXT .)
    LISTNUMBER      reduce using rule 23 (contents -> TEXT .)
    LISTDASH        reduce using rule 23 (contents -> TEXT .)
    $end            reduce using rule 23 (contents -> TEXT .)
    RBRACKET        reduce using rule 23 (contents -> TEXT .)
    RPAREN          reduce using rule 23 (contents -> TEXT .)


state 19

    (16) codefield0 -> line CODEFIELD .

    LINE            reduce using rule 16 (codefield0 -> line CODEFIELD .)
    TEXT            reduce using rule 16 (codefield0 -> line CODEFIELD .)


state 20

    (22) paragraph -> contents .

    LBRACKET        reduce using rule 22 (paragraph -> contents .)
    BOLD            reduce using rule 22 (paragraph -> contents .)
    ITALIC          reduce using rule 22 (paragraph -> contents .)
    CODE            reduce using rule 22 (paragraph -> contents .)
    TEXT            reduce using rule 22 (paragraph -> contents .)
    POUND           reduce using rule 22 (paragraph -> contents .)
    LINE            reduce using rule 22 (paragraph -> contents .)
    LISTNUMBER      reduce using rule 22 (paragraph -> contents .)
    LISTDASH        reduce using rule 22 (paragraph -> contents .)
    $end            reduce using rule 22 (paragraph -> contents .)


state 21

    (3) md -> md codefield line . CODEFIELD
    (14) codefield -> codefield line . line
    (27) line -> . LINE

    CODEFIELD       shift and go to state 36
    LINE            shift and go to state 11

    line                           shift and go to state 35

state 22

    (12) codefield0 -> codefield paragraph .
    (17) paragraph -> paragraph . contents
    (18) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> paragraph . BOLD contents BOLD
    (20) paragraph -> paragraph . ITALIC contents ITALIC
    (21) paragraph -> paragraph . CODE contents CODE
    (23) contents -> . TEXT

  ! shift/reduce conflict for TEXT resolved as shift
    LINE            reduce using rule 12 (codefield0 -> codefield paragraph .)
    LBRACKET        shift and go to state 29
    BOLD            shift and go to state 30
    ITALIC          shift and go to state 31
    CODE            shift and go to state 32
    TEXT            shift and go to state 18

  ! TEXT            [ reduce using rule 12 (codefield0 -> codefield paragraph .) ]

    contents                       shift and go to state 28

state 23

    (24) head -> POUND TEXT .

    POUND           reduce using rule 24 (head -> POUND TEXT .)
    LINE            reduce using rule 24 (head -> POUND TEXT .)
    LISTNUMBER      reduce using rule 24 (head -> POUND TEXT .)
    LISTDASH        reduce using rule 24 (head -> POUND TEXT .)
    $end            reduce using rule 24 (head -> POUND TEXT .)


state 24

    (15) codefield -> codefield0 line . line
    (27) line -> . LINE

    LINE            shift and go to state 11

    line                           shift and go to state 37

state 25

    (13) codefield0 -> codefield0 paragraph .
    (17) paragraph -> paragraph . contents
    (18) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> paragraph . BOLD contents BOLD
    (20) paragraph -> paragraph . ITALIC contents ITALIC
    (21) paragraph -> paragraph . CODE contents CODE
    (23) contents -> . TEXT

  ! shift/reduce conflict for TEXT resolved as shift
    LINE            reduce using rule 13 (codefield0 -> codefield0 paragraph .)
    LBRACKET        shift and go to state 29
    BOLD            shift and go to state 30
    ITALIC          shift and go to state 31
    CODE            shift and go to state 32
    TEXT            shift and go to state 18

  ! TEXT            [ reduce using rule 13 (codefield0 -> codefield0 paragraph .) ]

    contents                       shift and go to state 28

state 26

    (9) listnumber -> LISTNUMBER paragraph .
    (17) paragraph -> paragraph . contents
    (18) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> paragraph . BOLD contents BOLD
    (20) paragraph -> paragraph . ITALIC contents ITALIC
    (21) paragraph -> paragraph . CODE contents CODE
    (23) contents -> . TEXT

    POUND           reduce using rule 9 (listnumber -> LISTNUMBER paragraph .)
    LINE            reduce using rule 9 (listnumber -> LISTNUMBER paragraph .)
    LISTNUMBER      reduce using rule 9 (listnumber -> LISTNUMBER paragraph .)
    LISTDASH        reduce using rule 9 (listnumber -> LISTNUMBER paragraph .)
    $end            reduce using rule 9 (listnumber -> LISTNUMBER paragraph .)
    LBRACKET        shift and go to state 29
    BOLD            shift and go to state 30
    ITALIC          shift and go to state 31
    CODE            shift and go to state 32
    TEXT            shift and go to state 18

    contents                       shift and go to state 28

state 27

    (11) listdash -> LISTDASH paragraph .
    (17) paragraph -> paragraph . contents
    (18) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> paragraph . BOLD contents BOLD
    (20) paragraph -> paragraph . ITALIC contents ITALIC
    (21) paragraph -> paragraph . CODE contents CODE
    (23) contents -> . TEXT

    POUND           reduce using rule 11 (listdash -> LISTDASH paragraph .)
    LINE            reduce using rule 11 (listdash -> LISTDASH paragraph .)
    LISTNUMBER      reduce using rule 11 (listdash -> LISTDASH paragraph .)
    LISTDASH        reduce using rule 11 (listdash -> LISTDASH paragraph .)
    $end            reduce using rule 11 (listdash -> LISTDASH paragraph .)
    LBRACKET        shift and go to state 29
    BOLD            shift and go to state 30
    ITALIC          shift and go to state 31
    CODE            shift and go to state 32
    TEXT            shift and go to state 18

    contents                       shift and go to state 28

state 28

    (17) paragraph -> paragraph contents .

    LBRACKET        reduce using rule 17 (paragraph -> paragraph contents .)
    BOLD            reduce using rule 17 (paragraph -> paragraph contents .)
    ITALIC          reduce using rule 17 (paragraph -> paragraph contents .)
    CODE            reduce using rule 17 (paragraph -> paragraph contents .)
    TEXT            reduce using rule 17 (paragraph -> paragraph contents .)
    POUND           reduce using rule 17 (paragraph -> paragraph contents .)
    LINE            reduce using rule 17 (paragraph -> paragraph contents .)
    LISTNUMBER      reduce using rule 17 (paragraph -> paragraph contents .)
    LISTDASH        reduce using rule 17 (paragraph -> paragraph contents .)
    $end            reduce using rule 17 (paragraph -> paragraph contents .)


state 29

    (18) paragraph -> paragraph LBRACKET . contents RBRACKET LPAREN contents RPAREN
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    contents                       shift and go to state 38

state 30

    (19) paragraph -> paragraph BOLD . contents BOLD
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    contents                       shift and go to state 39

state 31

    (20) paragraph -> paragraph ITALIC . contents ITALIC
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    contents                       shift and go to state 40

state 32

    (21) paragraph -> paragraph CODE . contents CODE
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    contents                       shift and go to state 41

state 33

    (26) quote -> line QUOTE paragraph .
    (17) paragraph -> paragraph . contents
    (18) paragraph -> paragraph . LBRACKET contents RBRACKET LPAREN contents RPAREN
    (19) paragraph -> paragraph . BOLD contents BOLD
    (20) paragraph -> paragraph . ITALIC contents ITALIC
    (21) paragraph -> paragraph . CODE contents CODE
    (23) contents -> . TEXT

    POUND           reduce using rule 26 (quote -> line QUOTE paragraph .)
    LINE            reduce using rule 26 (quote -> line QUOTE paragraph .)
    LISTNUMBER      reduce using rule 26 (quote -> line QUOTE paragraph .)
    LISTDASH        reduce using rule 26 (quote -> line QUOTE paragraph .)
    $end            reduce using rule 26 (quote -> line QUOTE paragraph .)
    LBRACKET        shift and go to state 29
    BOLD            shift and go to state 30
    ITALIC          shift and go to state 31
    CODE            shift and go to state 32
    TEXT            shift and go to state 18

    contents                       shift and go to state 28

state 34

    (25) image -> line POINT LBRACKET . TEXT RBRACKET LPAREN TEXT RPAREN

    TEXT            shift and go to state 42


state 35

    (14) codefield -> codefield line line .

    LINE            reduce using rule 14 (codefield -> codefield line line .)
    TEXT            reduce using rule 14 (codefield -> codefield line line .)


state 36

    (3) md -> md codefield line CODEFIELD .

    POUND           reduce using rule 3 (md -> md codefield line CODEFIELD .)
    LINE            reduce using rule 3 (md -> md codefield line CODEFIELD .)
    LISTNUMBER      reduce using rule 3 (md -> md codefield line CODEFIELD .)
    LISTDASH        reduce using rule 3 (md -> md codefield line CODEFIELD .)
    $end            reduce using rule 3 (md -> md codefield line CODEFIELD .)


state 37

    (15) codefield -> codefield0 line line .

    LINE            reduce using rule 15 (codefield -> codefield0 line line .)
    TEXT            reduce using rule 15 (codefield -> codefield0 line line .)


state 38

    (18) paragraph -> paragraph LBRACKET contents . RBRACKET LPAREN contents RPAREN

    RBRACKET        shift and go to state 43


state 39

    (19) paragraph -> paragraph BOLD contents . BOLD

    BOLD            shift and go to state 44


state 40

    (20) paragraph -> paragraph ITALIC contents . ITALIC

    ITALIC          shift and go to state 45


state 41

    (21) paragraph -> paragraph CODE contents . CODE

    CODE            shift and go to state 46


state 42

    (25) image -> line POINT LBRACKET TEXT . RBRACKET LPAREN TEXT RPAREN

    RBRACKET        shift and go to state 47


state 43

    (18) paragraph -> paragraph LBRACKET contents RBRACKET . LPAREN contents RPAREN

    LPAREN          shift and go to state 48


state 44

    (19) paragraph -> paragraph BOLD contents BOLD .

    LBRACKET        reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    BOLD            reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    ITALIC          reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    CODE            reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    TEXT            reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    POUND           reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    LINE            reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    LISTNUMBER      reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    LISTDASH        reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)
    $end            reduce using rule 19 (paragraph -> paragraph BOLD contents BOLD .)


state 45

    (20) paragraph -> paragraph ITALIC contents ITALIC .

    LBRACKET        reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    BOLD            reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    ITALIC          reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    CODE            reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    TEXT            reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    POUND           reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    LINE            reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    LISTNUMBER      reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    LISTDASH        reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)
    $end            reduce using rule 20 (paragraph -> paragraph ITALIC contents ITALIC .)


state 46

    (21) paragraph -> paragraph CODE contents CODE .

    LBRACKET        reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    BOLD            reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    ITALIC          reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    CODE            reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    TEXT            reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    POUND           reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    LINE            reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    LISTNUMBER      reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    LISTDASH        reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)
    $end            reduce using rule 21 (paragraph -> paragraph CODE contents CODE .)


state 47

    (25) image -> line POINT LBRACKET TEXT RBRACKET . LPAREN TEXT RPAREN

    LPAREN          shift and go to state 49


state 48

    (18) paragraph -> paragraph LBRACKET contents RBRACKET LPAREN . contents RPAREN
    (23) contents -> . TEXT

    TEXT            shift and go to state 18

    contents                       shift and go to state 50

state 49

    (25) image -> line POINT LBRACKET TEXT RBRACKET LPAREN . TEXT RPAREN

    TEXT            shift and go to state 51


state 50

    (18) paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents . RPAREN

    RPAREN          shift and go to state 52


state 51

    (25) image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT . RPAREN

    RPAREN          shift and go to state 53


state 52

    (18) paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .

    LBRACKET        reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    BOLD            reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    ITALIC          reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    CODE            reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    TEXT            reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    POUND           reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    LINE            reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    LISTNUMBER      reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    LISTDASH        reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)
    $end            reduce using rule 18 (paragraph -> paragraph LBRACKET contents RBRACKET LPAREN contents RPAREN .)


state 53

    (25) image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .

    POUND           reduce using rule 25 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    LINE            reduce using rule 25 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    LISTNUMBER      reduce using rule 25 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    LISTDASH        reduce using rule 25 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)
    $end            reduce using rule 25 (image -> line POINT LBRACKET TEXT RBRACKET LPAREN TEXT RPAREN .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for TEXT in state 22 resolved as shift
WARNING: shift/reduce conflict for TEXT in state 25 resolved as shift
